src/axis/dom/syn/grammar/AxisParser.py
# Generated from src/axis/parsing/grammar/Axis.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class AxisParser ( Parser ):

    grammarFileName = "Axis.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'unit'", "'mod'", "'def'", "'val'", "';'", 
                     "'use'", "'takes'", "'where'", "'returns'", "'suite'", 
                     "'('", "','", "')'", "'.'", "'::'", "'['", "']'", "'{'", 
                     "'}'", "<INVALID>", "<INVALID>", "<INVALID>", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'&&'", "'||'", "':'", "'='", 
                     "'->'", "'..'", "'_'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ID", "DECIMAL", "TEXT", "ADD", "SUB", "MUL", "DIV", 
                      "MOD", "EQ", "NE", "LT", "LE", "GT", "GE", "AND", 
                      "OR", "COLON", "ASSIGN", "ARROW", "ELLIPSIS", "WILDCARD", 
                      "WS", "COMMENT" ]

    RULE_unitItem = 0
    RULE_modItem = 1
    RULE_defItem = 2
    RULE_valItem = 3
    RULE_useItem = 4
    RULE_takesBlock = 5
    RULE_whereBlock = 6
    RULE_returnsBlock = 7
    RULE_suiteBlock = 8
    RULE_suite = 9
    RULE_statement = 10
    RULE_valStatement = 11
    RULE_pattern = 12
    RULE_tuplePattern = 13
    RULE_tuplePatternElement = 14
    RULE_expression = 15
    RULE_juxtapositionExpr = 16
    RULE_logicalExpr = 17
    RULE_logicalOp = 18
    RULE_comparisonExpr = 19
    RULE_addition = 20
    RULE_product = 21
    RULE_postfix = 22
    RULE_primaryExpr = 23
    RULE_wildcard = 24
    RULE_ellipsis = 25
    RULE_spread = 26
    RULE_tuple = 27
    RULE_shape = 28
    RULE_tupleElement = 29
    RULE_lambda = 30
    RULE_semicolon = 31
    RULE_lambdaParams = 32
    RULE_lambdaParam = 33
    RULE_argument = 34
    RULE_identifier = 35
    RULE_literal = 36
    RULE_text = 37
    RULE_decimal = 38

    ruleNames =  [ "unitItem", "modItem", "defItem", "valItem", "useItem", 
                   "takesBlock", "whereBlock", "returnsBlock", "suiteBlock", 
                   "suite", "statement", "valStatement", "pattern", "tuplePattern", 
                   "tuplePatternElement", "expression", "juxtapositionExpr", 
                   "logicalExpr", "logicalOp", "comparisonExpr", "addition", 
                   "product", "postfix", "primaryExpr", "wildcard", "ellipsis", 
                   "spread", "tuple", "shape", "tupleElement", "lambda", 
                   "semicolon", "lambdaParams", "lambdaParam", "argument", 
                   "identifier", "literal", "text", "decimal" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    ID=20
    DECIMAL=21
    TEXT=22
    ADD=23
    SUB=24
    MUL=25
    DIV=26
    MOD=27
    EQ=28
    NE=29
    LT=30
    LE=31
    GT=32
    GE=33
    AND=34
    OR=35
    COLON=36
    ASSIGN=37
    ARROW=38
    ELLIPSIS=39
    WILDCARD=40
    WS=41
    COMMENT=42

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class UnitItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(AxisParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(AxisParser.EOF, 0)

        def getRuleIndex(self):
            return AxisParser.RULE_unitItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnitItem" ):
                listener.enterUnitItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnitItem" ):
                listener.exitUnitItem(self)




    def unitItem(self):

        localctx = AxisParser.UnitItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_unitItem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(AxisParser.T__0)
            self.state = 79
            self.expression()
            self.state = 80
            self.match(AxisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ModItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(AxisParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(AxisParser.EOF, 0)

        def getRuleIndex(self):
            return AxisParser.RULE_modItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterModItem" ):
                listener.enterModItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitModItem" ):
                listener.exitModItem(self)




    def modItem(self):

        localctx = AxisParser.ModItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_modItem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.match(AxisParser.T__1)
            self.state = 83
            self.expression()
            self.state = 84
            self.match(AxisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DefItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(AxisParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(AxisParser.EOF, 0)

        def getRuleIndex(self):
            return AxisParser.RULE_defItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDefItem" ):
                listener.enterDefItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDefItem" ):
                listener.exitDefItem(self)




    def defItem(self):

        localctx = AxisParser.DefItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_defItem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(AxisParser.T__2)
            self.state = 87
            self.expression()
            self.state = 88
            self.match(AxisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxisParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(AxisParser.ExpressionContext,i)


        def EOF(self):
            return self.getToken(AxisParser.EOF, 0)

        def COLON(self):
            return self.getToken(AxisParser.COLON, 0)

        def ASSIGN(self):
            return self.getToken(AxisParser.ASSIGN, 0)

        def getRuleIndex(self):
            return AxisParser.RULE_valItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValItem" ):
                listener.enterValItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValItem" ):
                listener.exitValItem(self)




    def valItem(self):

        localctx = AxisParser.ValItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_valItem)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(AxisParser.T__3)
            self.state = 91
            self.expression()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 92
                self.match(AxisParser.COLON)
                self.state = 93
                self.expression()


            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==37:
                self.state = 96
                self.match(AxisParser.ASSIGN)
                self.state = 97
                self.expression()


            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 100
                self.match(AxisParser.T__4)


            self.state = 103
            self.match(AxisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class UseItemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(AxisParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(AxisParser.EOF, 0)

        def getRuleIndex(self):
            return AxisParser.RULE_useItem

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUseItem" ):
                listener.enterUseItem(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUseItem" ):
                listener.exitUseItem(self)




    def useItem(self):

        localctx = AxisParser.UseItemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_useItem)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(AxisParser.T__5)
            self.state = 106
            self.expression()
            self.state = 107
            self.match(AxisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TakesBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(AxisParser.COLON, 0)

        def EOF(self):
            return self.getToken(AxisParser.EOF, 0)

        def ID(self):
            return self.getToken(AxisParser.ID, 0)

        def getRuleIndex(self):
            return AxisParser.RULE_takesBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTakesBlock" ):
                listener.enterTakesBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTakesBlock" ):
                listener.exitTakesBlock(self)




    def takesBlock(self):

        localctx = AxisParser.TakesBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_takesBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(AxisParser.T__6)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 110
                self.match(AxisParser.ID)


            self.state = 113
            self.match(AxisParser.COLON)
            self.state = 114
            self.match(AxisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhereBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COLON(self):
            return self.getToken(AxisParser.COLON, 0)

        def EOF(self):
            return self.getToken(AxisParser.EOF, 0)

        def getRuleIndex(self):
            return AxisParser.RULE_whereBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhereBlock" ):
                listener.enterWhereBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhereBlock" ):
                listener.exitWhereBlock(self)




    def whereBlock(self):

        localctx = AxisParser.WhereBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whereBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.match(AxisParser.T__7)
            self.state = 117
            self.match(AxisParser.COLON)
            self.state = 118
            self.match(AxisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnsBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(AxisParser.ExpressionContext,0)


        def EOF(self):
            return self.getToken(AxisParser.EOF, 0)

        def getRuleIndex(self):
            return AxisParser.RULE_returnsBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnsBlock" ):
                listener.enterReturnsBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnsBlock" ):
                listener.exitReturnsBlock(self)




    def returnsBlock(self):

        localctx = AxisParser.ReturnsBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_returnsBlock)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.match(AxisParser.T__8)
            self.state = 121
            self.expression()
            self.state = 122
            self.match(AxisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SuiteBlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(AxisParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxisParser.StatementContext)
            else:
                return self.getTypedRuleContext(AxisParser.StatementContext,i)


        def getRuleIndex(self):
            return AxisParser.RULE_suiteBlock

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSuiteBlock" ):
                listener.enterSuiteBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSuiteBlock" ):
                listener.exitSuiteBlock(self)




    def suiteBlock(self):

        localctx = AxisParser.SuiteBlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_suiteBlock)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.match(AxisParser.T__9)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1649275045904) != 0):
                self.state = 125
                self.statement()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 131
            self.match(AxisParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SuiteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxisParser.StatementContext)
            else:
                return self.getTypedRuleContext(AxisParser.StatementContext,i)


        def getRuleIndex(self):
            return AxisParser.RULE_suite

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSuite" ):
                listener.enterSuite(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSuite" ):
                listener.exitSuite(self)




    def suite(self):

        localctx = AxisParser.SuiteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_suite)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1649275045904) != 0):
                self.state = 133
                self.statement()
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def valStatement(self):
            return self.getTypedRuleContext(AxisParser.ValStatementContext,0)


        def expression(self):
            return self.getTypedRuleContext(AxisParser.ExpressionContext,0)


        def getRuleIndex(self):
            return AxisParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = AxisParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_statement)
        try:
            self.state = 141
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.valStatement()
                pass
            elif token in [11, 18, 20, 21, 22, 39, 40]:
                self.enterOuterAlt(localctx, 2)
                self.state = 140
                self.expression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pattern(self):
            return self.getTypedRuleContext(AxisParser.PatternContext,0)


        def COLON(self):
            return self.getToken(AxisParser.COLON, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxisParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(AxisParser.ExpressionContext,i)


        def ASSIGN(self):
            return self.getToken(AxisParser.ASSIGN, 0)

        def getRuleIndex(self):
            return AxisParser.RULE_valStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValStatement" ):
                listener.enterValStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValStatement" ):
                listener.exitValStatement(self)




    def valStatement(self):

        localctx = AxisParser.ValStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_valStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(AxisParser.T__3)

            self.state = 144
            self.pattern()
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 145
                self.match(AxisParser.COLON)
                self.state = 146
                self.expression()


            self.state = 151
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==37:
                self.state = 149
                self.match(AxisParser.ASSIGN)
                self.state = 150
                self.expression()


            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 153
                self.match(AxisParser.T__4)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PatternContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(AxisParser.IdentifierContext,0)


        def tuplePattern(self):
            return self.getTypedRuleContext(AxisParser.TuplePatternContext,0)


        def getRuleIndex(self):
            return AxisParser.RULE_pattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPattern" ):
                listener.enterPattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPattern" ):
                listener.exitPattern(self)




    def pattern(self):

        localctx = AxisParser.PatternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_pattern)
        try:
            self.state = 158
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20]:
                self.enterOuterAlt(localctx, 1)
                self.state = 156
                self.identifier()
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.tuplePattern()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TuplePatternContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def tuplePatternElement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxisParser.TuplePatternElementContext)
            else:
                return self.getTypedRuleContext(AxisParser.TuplePatternElementContext,i)


        def getRuleIndex(self):
            return AxisParser.RULE_tuplePattern

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTuplePattern" ):
                listener.enterTuplePattern(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTuplePattern" ):
                listener.exitTuplePattern(self)




    def tuplePattern(self):

        localctx = AxisParser.TuplePatternContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_tuplePattern)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(AxisParser.T__10)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==20:
                self.state = 161
                self.tuplePatternElement()
                self.state = 166
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==12:
                    self.state = 162
                    self.match(AxisParser.T__11)
                    self.state = 163
                    self.tuplePatternElement()
                    self.state = 168
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 171
            self.match(AxisParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TuplePatternElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxisParser.IdentifierContext)
            else:
                return self.getTypedRuleContext(AxisParser.IdentifierContext,i)


        def COLON(self):
            return self.getToken(AxisParser.COLON, 0)

        def getRuleIndex(self):
            return AxisParser.RULE_tuplePatternElement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTuplePatternElement" ):
                listener.enterTuplePatternElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTuplePatternElement" ):
                listener.exitTuplePatternElement(self)




    def tuplePatternElement(self):

        localctx = AxisParser.TuplePatternElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_tuplePatternElement)
        try:
            self.state = 178
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 173
                self.identifier()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.identifier()
                self.state = 175
                self.match(AxisParser.COLON)
                self.state = 176
                self.identifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def juxtapositionExpr(self):
            return self.getTypedRuleContext(AxisParser.JuxtapositionExprContext,0)


        def getRuleIndex(self):
            return AxisParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):

        localctx = AxisParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.juxtapositionExpr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class JuxtapositionExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(AxisParser.LogicalExprContext)
            else:
                return self.getTypedRuleContext(AxisParser.LogicalExprContext,i)


        def getRuleIndex(self):
            return AxisParser.RULE_juxtapositionExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJuxtapositionExpr" ):
                listener.enterJuxtapositionExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJuxtapositionExpr" ):
                listener.exitJuxtapositionExpr(self)




    def juxtapositionExpr(self):

        localctx = AxisParser.JuxtapositionExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_juxtapositionExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 182
            self.logicalExpr()
            self.state = 186
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 183
                    self.logicalExpr() 
                self.state = 188
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalExprContext(ParserRuleContext):
        __slots__ = 'parser'
